packages/markdown-core/elements/comment_scanners.c
/* Generated by re2c 4.6 */
#include "comment_scanners.h"

/* Shared byte-scanner configuration and lexical primitives. */







bufsize_t scan_html_comment(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128,   0, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128
	};
	yych = (p < remaining ? input[p] : 0);
	if (yych == '-') goto yy2;
	++p;
yy1:
	{ return 0; }
yy2:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych != '-') goto yy1;
yy3:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy3;
	if (yych >= 0x01) goto yy5;
yy4:
	p = marker;
	goto yy1;
yy5:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy3;
	if (yych <= 0x00) goto yy4;
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= 0x00) goto yy4;
	if (yych != '>') goto yy3;
	++p;
	{ return (bufsize_t)(p - start); }
}

}

bufsize_t scan_html_block_end_2(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[256] = {
		  0,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,   0,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64, 128,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64,
		 64,  64,  64,  64,  64,  64,  64,  64
	};
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '\n') {
		if (yych <= 0x00) goto yy7;
		if (yych <= '\t') goto yy9;
	} else {
		if (yych == '-') goto yy10;
		goto yy9;
	}
yy7:
	++p;
yy8:
	{ return 0; }
yy9:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= 0x00) goto yy8;
	if (yych == '\n') goto yy8;
	goto yy12;
yy10:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy11;
	if (yych <= '\n') goto yy8;
	goto yy15;
yy11:
	++p;
	yych = (p < remaining ? input[p] : 0);
yy12:
	if (yybm[0+yych] & 64) goto yy11;
	if (yych >= '\v') goto yy14;
yy13:
	p = marker;
	if (yyaccept == 0) goto yy8;
	else goto yy16;
yy14:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy11;
	if (yych <= '\n') goto yy13;
yy15:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy15;
	if (yych <= '\n') {
		if (yych <= 0x00) goto yy13;
		if (yych <= '\t') goto yy11;
		goto yy13;
	} else {
		if (yych != '>') goto yy11;
	}
	yyaccept = 1;
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy11;
	if (yych >= '\v') goto yy14;
yy16:
	{ return (bufsize_t)(p - start); }
}

}
